[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/NPC_Scene.gd" type="Script" id=1]
[ext_resource path="res://Scripts/NPC_Dialogue_Script.gd" type="Script" id=2]
[ext_resource path="res://Scripts/NPC_AI_Script.gd" type="Script" id=3]


[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[node name="NPC_BaseNode" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
NPC_IdleTime = 0
NPC_Waypoints = SubResource( 1 )
NPC_TargetingArea = 0
NPC_FollowCooldown = 0

[node name="NPC_Dialogue" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="Activation_Area" type="Area2D" parent="NPC_Dialogue" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Collision" type="CollisionShape2D" parent="NPC_Dialogue/Activation_Area" index="0"]

position = Vector2( 0.245255, 0.000957489 )
scale = Vector2( 2.65342, 2.38697 )
shape = SubResource( 2 )

[node name="NPC_AI" type="Node" parent="." index="1"]

script = ExtResource( 3 )

[node name="TargetigArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 6
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="TargetingCollision" type="CollisionShape2D" parent="TargetigArea" index="0"]

shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="RandomText" type="TextureRect" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -64.0
margin_right = 15.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="Text" type="RichTextLabel" parent="RandomText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="NPC_Collision" type="CollisionShape2D" parent="." index="4"]

shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="NPC_Dialogue/Activation_Area" to="." method="_on_Activation_Area_area_entered"]

[connection signal="area_exited" from="NPC_Dialogue/Activation_Area" to="." method="_on_Activation_Area_area_exited"]

[connection signal="area_shape_entered" from="TargetigArea" to="NPC_AI" method="_on_TargetigArea_area_shape_entered"]

[connection signal="area_shape_exited" from="TargetigArea" to="NPC_AI" method="_on_TargetigArea_area_shape_exited"]


